[package]
name = "commonware-storage-core"
edition = "2021"
publish = true
version = "0.0.61"
license = "MIT OR Apache-2.0"
description = "Core no_std storage primitives for Commonware."
readme = "README.md"
homepage = "https://commonware.xyz"
repository = "https://github.com/commonwarexyz/monorepo/tree/main/storage-core"
documentation = "https://docs.rs/commonware-storage-core"

[features]
default = ["alloc"]
alloc = []
std = ["tracing", "commonware-runtime", "rayon", "thiserror/std", "bytes/std", "commonware-cryptography/std"]

[dependencies]
commonware-codec = { workspace = true }
commonware-cryptography = { workspace = true }
commonware-utils = { workspace = true }
commonware-runtime = { workspace = true, optional = true }
thiserror = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }

[dev-dependencies]
commonware-storage-core = { path = ".", features = ["std"] }

[package.metadata.cargo-udeps.ignore]
development = ["commonware-storage-core"]

[lib]
bench = false
