[package]
name = "commonware-storage-core"
edition = "2021"
publish = true
version = "0.0.59"
license = "MIT OR Apache-2.0"
description = "Core no_std storage primitives for Commonware."
readme = "README.md"
homepage = "https://commonware.xyz"
repository = "https://github.com/commonwarexyz/monorepo/tree/main/storage-core"
documentation = "https://docs.rs/commonware-storage-core"

[features]
default = ["alloc"]
alloc = []

[dependencies]
thiserror = { workspace = true }
sha2 = { version = "0.10.8", default-features = false }

[dev-dependencies]

[lib]
bench = false
